--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.29",
     "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.427.0",
@@ -70,6 +71,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
     "@types/react": "^18.3.12",
