--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.29",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.2",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
     "leaflet": "^1.9.4",
