--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-#NEXT_PUBLIC_URL = "http://localhost:8080/api/v1"
- NEXT_PUBLIC_URL = "https://api.ramycan.com/api/v1/"
+NEXT_PUBLIC_URL = "http://localhost:8080/api/v1"
+#  NEXT_PUBLIC_URL = "https://api.ramycan.com/api/v1/"
 
 #NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Z3JhdGVmdWwtc3VuYmlyZC05My5jbGVyay5hY2NvdW50cy5kZXYk
 #CLERK_SECRET_KEY=sk_test_blsn5MKFmv7buHZfhR7CtUMAEZMtdTrPA198oTm6mv
